--- a/home/index.html
+++ b/home/index.html
@@ -1,21 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+<!DOCTYPE html><html lang="en"><head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>q5</title>
 	<link rel="icon" href="/q5js_logo.webp">
 	<link rel="stylesheet" href="index.css">
-	<meta name="description"
-		content="Beginner friendly graphics powered by WebGPU and optimized for interactive art! q5.js is also compatible with popular p5.js addons including p5.sound, ml5.js, and p5play.">
+	<meta name="description" content="Beginner friendly graphics powered by WebGPU and optimized for interactive art! q5.js is also compatible with popular p5.js addons including p5.sound, ml5.js, and p5play.">
 
 	<meta property="og:title" content="q5.js">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://q5js.org">
 	<meta property="og:image" content="q5js_logo.webp">
-	<meta property="og:description"
-		content="Beginner friendly graphics powered by WebGPU and optimized for interactive art! q5.js is also compatible with popular p5.js addons including p5.sound, ml5.js, and p5play.">
+	<meta property="og:description" content="Beginner friendly graphics powered by WebGPU and optimized for interactive art! q5.js is also compatible with popular p5.js addons including p5.sound, ml5.js, and p5play.">
 </head>
 
 <body class="dark">
@@ -36,8 +31,7 @@
 			<div class="btn">
 				<div id="darkModeIcon"></div>
 			</div>
-			<textarea id="scriptLink" rows="1"
-				readonly="">&lt;script src="https://q5js.org/q5.js"&gt;&lt;/script&gt;</textarea>
+			<textarea id="scriptLink" rows="1" readonly="">&lt;script src="https://q5js.org/q5.js"&gt;&lt;/script&gt;</textarea>
 			<div class="btn">
 				<div id="fullscreenIcon"></div>
 			</div>
@@ -45,24 +39,22 @@
 	</div>
 	<div id="reel1" class="reel">
 		<md id="md1-0">
-			<h2 id="create-art-with-q5-🎨">Create art with q5! 🎨</h2>
-			<ul>
-				<li>inspired by <a href="https://p5js.org" target="_blank">p5.js</a> and <a href="https://processing.org/"
-						target="_blank">Processing</a> ⭐️</li>
-				<li>performance optimized for interactive art 🚀</li>
-				<li>lightning fast <a href="https://github.com/q5js/q5.js/wiki/q5-WebGPU-renderer" target="_blank">WebGPU
-						renderer</a> ⚡️</li>
-				<li>beginner friendly <a href="/learn" target="_blank">documentation</a> 📚</li>
-				<li>compatible with popular p5 addons 🧩</li>
-				<li>no dependencies, ~110kb minified 📦</li>
-				<li>free to use under the LGPL (just like p5.js) 🆓</li>
-			</ul>
-		</md>
+<h2 id="create-art-with-q5-🎨">Create art with q5! 🎨</h2>
+<ul>
+<li>inspired by <a href="https://p5js.org" target="_blank">p5.js</a> and <a href="https://processing.org/" target="_blank">Processing</a> ⭐️</li>
+<li>performance optimized for interactive art 🚀</li>
+<li>lightning fast <a href="https://github.com/q5js/q5.js/wiki/q5-WebGPU-renderer" target="_blank">WebGPU renderer</a> ⚡️</li>
+<li>beginner friendly <a href="/learn" target="_blank">documentation</a> 📚</li>
+<li>compatible with popular p5 addons 🧩</li>
+<li>no dependencies, ~110kb minified 📦</li>
+<li>free to use under the LGPL (just like p5.js) 🆓</li>
+</ul>
+</md>
 		<div class="minis">
 			<md id="md1-1">
-				<p>Familiar with p5? You'll be right at home with q5. 🏡</p>
-				<p>It's like getting a free computer upgrade! 🖥️</p>
-			</md>
+<p>Familiar with p5? You'll be right at home with q5. 🏡</p>
+<p>It's like getting a free computer upgrade! 🖥️</p>
+</md>
 			<script type="mini" id="q5.js" horiz="">
 createCanvas(100, 100);
 circle(50, 50, 50);
@@ -72,8 +64,8 @@ circle(50, 50, 50);
 	</div>
 	<div class="reel">
 		<md id="md3-0">
-			<h2 id="works-with">Works with</h2>
-		</md>
+<h2 id="works-with">Works with</h2>
+</md>
 		<div id="partners">
 			<!-- <a href="https://b5editor.app/"
 				title="b5 - A node based online editor for introducing q5.js to young programmers." target="_blank">
@@ -82,8 +74,7 @@ circle(50, 50, 50);
 			<a href="https://p5js.org/reference/p5.sound/">
 				<img id="ml5_brand" src="/assets/brands/p5sound_brand.webp" alt="">
 			</a>
-			<a href="https://p5play.org"
-				title="p5play - A JavaScript game engine that uses q5.js for graphics and Box2D for physics." target="_blank">
+			<a href="https://p5play.org" title="p5play - A JavaScript game engine that uses q5.js for graphics and Box2D for physics." target="_blank">
 				<!-- <img id="p5play_logo" src="/assets/brands/p5play_logo.svg" alt=""> -->
 				<img id="p5play_brand" src="/assets/brands/p5play_brand_dark.webp" alt="">
 			</a>
@@ -99,82 +90,63 @@ circle(50, 50, 50);
 	<div id="reel4" class="reel">
 		<div class="minis horiz">
 			<md id="md4-0">
-				<h2 id="start-coding-💻">Start coding! 💻</h2>
-				<p>No installation required! Use an online code editor: <a
-						href="https://idx.google.com/new?template=https:%2F%2Fgithub.com%2Fq5js%2Fq5-webgpu-template"
-						target="_blank">Project IDX</a>, <a href="https://openprocessing.org/sketch/2534845"
-						target="_blank">OpenProcessing</a>, or <a href="https://codepen.io/qashto/pen/jENEJNy"
-						target="_blank">CodePen</a>.</p>
-			</md>
+<h2 id="start-coding-💻">Start coding! 💻</h2>
+<p>No installation required! Use an online code editor: <a href="https://studio.firebase.google.com/new?template=https:%2F%2Fgithub.com%2Fq5js%2Fq5-webgpu-template" target="_blank">Firebase Studio</a>, <a href="https://openprocessing.org/sketch/2534845" target="_blank">OpenProcessing</a>, or <a href="https://codepen.io/qashto/pen/jENEJNy" target="_blank">CodePen</a>.</p>
+</md>
 			<md id="md4-1">
-				<h2 id="join-us-🤝">Join us 🤝</h2>
-				<p>The future of creative coding is here! Join us on the <a href="https://discord.gg/QuxQYwGWuB"
-						target="_blank">q5 community Discord</a>.</p>
-			</md>
+<h2 id="join-us-🤝">Join us 🤝</h2>
+<p>The future of creative coding is here! Join us on the <a href="https://discord.gg/QuxQYwGWuB" target="_blank">q5 community Discord</a>.</p>
+</md>
 			<div class="minis horiz">
 				<md id="md4-2">
-					<h2 id="local-dev-🛠️">Local dev 🛠️</h2>
-					<p>You can <a href="https://github.com/q5js/q5.js/wiki/Get-Started" target="_blank">use q5 offline</a> or add
-						this to your HTML file to always load the latest version.</p>
-					<pre><code class="language-html">&lt;script src="https://q5js.org/q5.js"&gt;&lt;/script&gt;
+<h2 id="local-dev-🛠️">Local dev 🛠️</h2>
+<p>You can <a href="https://github.com/q5js/q5.js/wiki/Get-Started" target="_blank">use q5 offline</a> or add this to your HTML file to always load the latest version.</p>
+<pre><code class="language-html">&lt;script src="https://q5js.org/q5.js"&gt;&lt;/script&gt;
 </code></pre>
-				</md>
+</md>
 				<md id="md4-3">
-					<h2 id="support-q5-💙">Support q5 💙</h2>
-					<p><a href="https://github.com/q5js/q5.js" target="_blank">q5 is open source on GitHub</a> and anyone can use
-						it for free under the terms of the LGPL (just like p5.js).</p>
-					<p>If you enjoy using q5, we need your support via <a href="https://github.com/sponsors/quinton-ashley"
-							target="_blank">GitHub Sponsors</a>, <a href="https://ko-fi.com/q5play" target="_blank">Ko-fi</a>, or <a
-							href="https://www.patreon.com/q5play" target="_blank">Patreon</a>.</p>
-				</md>
+<h2 id="support-q5-💙">Support q5 💙</h2>
+<p><a href="https://github.com/q5js/q5.js" target="_blank">q5 is open source on GitHub</a> and anyone can use it for free under the terms of the LGPL (just like p5.js).</p>
+<p>If you enjoy using q5, we need your support via <a href="https://github.com/sponsors/quinton-ashley" target="_blank">GitHub Sponsors</a>, <a href="https://ko-fi.com/q5play" target="_blank">Ko-fi</a>, or <a href="https://www.patreon.com/q5play" target="_blank">Patreon</a>.</p>
+</md>
 			</div>
 		</div>
 	</div>
 
 	<div id="reel10" class="reel">
 		<md id="md10-0">
-			<h2 id="exclusive-features-💫">Exclusive Features 💫</h2>
-		</md>
+<h2 id="exclusive-features-💫">Exclusive Features 💫</h2>
+</md>
 		<div class="minis horiz">
 			<md id="md10-1">
-				<ul>
-					<li>frame your canvas with <a href="/learn/#displayMode" target="_blank"><code>displayMode</code></a> 🖼️</li>
-					<li><a href="https://github.com/q5js/q5.js/wiki/Top%E2%80%90Level-Global-Mode" target="_blank">top-level
-							global mode</a> ⚙️</li>
-					<li>modular use from <a href="https://github.com/q5js/q5.js/tree/main/src" target="_blank">source</a> 📦</li>
-				</ul>
-			</md>
+<ul>
+<li>frame your canvas with <a href="/learn/#displayMode" target="_blank"><code>displayMode</code></a> 🖼️</li>
+<li><a href="https://github.com/q5js/q5.js/wiki/Top%E2%80%90Level-Global-Mode" target="_blank">top-level global mode</a> ⚙️</li>
+<li>modular use from <a href="https://github.com/q5js/q5.js/tree/main/src" target="_blank">source</a> 📦</li>
+</ul>
+</md>
 			<md id="md10-2">
-				<ul>
-					<li>98% smaller than p5 + p5.sound + p5.capture 🌳</li>
-					<li>includes <a href="/learn/#soundSection" target="_blank">sound</a> playback and mixing 🔊</li>
-					<li>includes canvas <a href="/learn/#recordSection" target="_blank">recorder</a> 🎞️</li>
-				</ul>
-			</md>
+<ul>
+<li>98% smaller than p5 + p5.sound + p5.capture 🌳</li>
+<li>includes <a href="/learn/#soundSection" target="_blank">sound</a> playback and mixing 🔊</li>
+<li>includes canvas <a href="/learn/#recordSection" target="_blank">recorder</a> 🎞️</li>
+</ul>
+</md>
 		</div>
 	</div>
 
 	<div id="reel20" class="reel">
 		<md id="md20-0">
-			<h2 id="credits-🌟">Credits 🌟</h2>
-			<p>This project aims to continue the legacy of the incredible work done by <a href="https://benfry.com"
-					target="_blank">Ben Fry</a> and <a href="https://x.com/REAS" target="_blank">Casey Reas</a> on Java <a
-					href="https://processingfoundation.org/" target="_blank">Processing</a>, <a href="http://lauren-mccarthy.com"
-					target="_blank">Lauren McCarthy</a>'s work on <a href="https://p5js.org" target="_blank">p5.js</a>, and all
-				contributors to these projects.</p>
-			<p>The original <a href="https://github.com/LingDong-/q5xjs" target="_blank">q5xjs (v0)</a> was created by <a
-					href="https://github.com/LingDong-" target="_blank">@LingDong~</a> and released under the public domain
-				Unlicense license. We forked and significantly extended the abandoned codebase.</p>
-			<p>q5.js is open source under the LGPLv3, created and actively maintained by <a
-					href="https://github.com/quinton-ashley" target="_blank">@quinton-ashley</a>. The q5 team includes contributor
-				<a href="https://github.com/Tezumie" target="_blank">@Tezumie</a>.
-			</p>
-		</md>
+<h2 id="credits-🌟">Credits 🌟</h2>
+<p>This project aims to continue the legacy of the incredible work done by <a href="https://benfry.com" target="_blank">Ben Fry</a> and <a href="https://x.com/REAS" target="_blank">Casey Reas</a> on Java <a href="https://processingfoundation.org/" target="_blank">Processing</a>, <a href="http://lauren-mccarthy.com" target="_blank">Lauren McCarthy</a>'s work on <a href="https://p5js.org" target="_blank">p5.js</a>, and all contributors to these projects.</p>
+<p>The original <a href="https://github.com/LingDong-/q5xjs" target="_blank">q5xjs (v0)</a> was created by <a href="https://github.com/LingDong-" target="_blank">@LingDong~</a> and released under the public domain Unlicense license. We forked and significantly extended the abandoned codebase.</p>
+<p>q5.js is open source under the LGPLv3, created and actively maintained by <a href="https://github.com/quinton-ashley" target="_blank">@quinton-ashley</a>. The q5 team includes contributor <a href="https://github.com/Tezumie" target="_blank">@Tezumie</a>.</p>
+</md>
 	</div>
 	<footer>
 		<md id="md100">
-			<p>q5js.org was created by the q5 team. Copyright 2024-2025.</p>
-		</md>
+<p>q5js.org was created by the q5 team. Copyright 2024-2025.</p>
+</md>
 	</footer>
 
 	<script src="../q5.js"></script>
@@ -334,6 +306,7 @@ circle(50, 50, 50);
 		})();
 	</script>
 
-</body>
 
-</html>
+
+
+</body></html>
