--- a/dev/mjs.html
+++ b/dev/mjs.html
@@ -39,11 +39,7 @@
 		import '/src/q5-sound.js';
 		import '/src/q5-util.js';
 		import '/src/q5-vector.js';
-		import '/src/q5-webgpu-canvas.js';
-		import '/src/q5-webgpu-shapes.js';
-		import '/src/q5-webgpu-image.js';
-		import '/src/q5-webgpu-shaders.js';
-		import '/src/q5-webgpu-text.js';
+		import '/src/q5-webgpu.js';
 	</script>
 
 	<script type="module" src="sketch.js"></script>
