--- a/dev/index.html
+++ b/dev/index.html
@@ -38,12 +38,7 @@
 	<script src="/src/q5-sound.js"></script>
 	<script src="/src/q5-util.js"></script>
 	<script src="/src/q5-vector.js"></script>
-
-	<script src="/src/q5-webgpu-canvas.js"></script>
-	<script src="/src/q5-webgpu-shapes.js"></script>
-	<script src="/src/q5-webgpu-image.js"></script>
-	<script src="/src/q5-webgpu-text.js"></script>
-	<script src="/src/q5-webgpu-shaders.js"></script>
+	<script src="/src/q5-webgpu.js"></script>
 
 	<!-- <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script> -->
 	<!-- <script src="https://cdn.jsdelivr.net/npm/p5.sound@0.1.0/dist/p5.sound.js"></script> -->
