mobile ux fixes

--- a/learn/index.html
+++ b/learn/index.html
@@ -21,7 +21,7 @@
 			</a>
 			<div class="input-wrapper search-bar">
 				<span class="magnify-glass"></span>
-				<input autocomplete="off" type="text" id="listSearch" class="dialog-input" placeholder="Search">
+				<input autocomplete="off" type="text" id="searchInput" class="dialog-input" placeholder="Search">
 				<div id="searchResultsContainer" class="search-results">
 					<div class="search-result prompt-message">Start typing to search the documentation</div>
 				</div>
