--- a/dev/index.html
+++ b/dev/index.html
@@ -44,6 +44,9 @@
 
 	<!-- <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script> -->
 
+	<!-- <script src="https://p5play.org/v3/planck.min.js"></script>
+	<script src="https://p5play.org/v3/p5play.js"></script> -->
+
 	<!-- <script src="/src/q5-dom.js"></script> -->
 	<!-- <script src="/src/q5-2d-soft-filters.js"></script> -->
 	<!-- <script src="/src/q5-noisier.js"></script> -->
