--- a/dev/mjs.html
+++ b/dev/mjs.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
 	<title>q5.js mjs testing</title>
-	<link rel="icon" href="/q5js_logo.webp" />
+	<link rel="icon" href="/q5js_logo.avif" />
 	<style>
 		html,
 		body {
