--- a/learn/index.html
+++ b/learn/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>q5 : Learn</title>
-	<link rel="icon" href="/q5js_logo.webp">
+	<link rel="icon" href="/q5js_logo.avif">
 	<link rel="stylesheet" type="text/css" href="docs.css" />
 </head>
 
@@ -16,7 +16,7 @@
 			<a id="homeLink" href="../home">
 				<button id="homeButton">
 					<img class="logo" src="/assets/q5js_icon-light.png" alt="">
-					<img class="brand" src="/assets/q5js_brand-light.webp">
+					<img class="brand" src="/assets/q5js_brand-light.avif">
 				</button>
 			</a>
 			<div class="input-wrapper search-bar">
