--- a/dev/mjs.html
+++ b/dev/mjs.html
@@ -42,7 +42,7 @@
 		import '/src/q5-webgpu.js';
 	</script>
 
-	<script type="module" src="sketch.js"></script>
+	<script type="module" src="sketch.js" data-sketch></script>
 </body>
 
 </html>
