--- a/dev/index.html
+++ b/dev/index.html
@@ -34,6 +34,7 @@
 		import '/src/q5-dom.js';
 		import '/src/q5-fes.js';
 		import '/src/q5-input.js';
+		import '/src/q5-lang.js';
 		import '/src/q5-math.js';
 		import '/src/q5-record.js';
 		import '/src/q5-sound.js';
