--- a/learn/index.html
+++ b/learn/index.html
@@ -61,7 +61,7 @@
 	<script src="/q5.js"></script>
 
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.52.2/min/vs/loader.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.55.1/min/vs/loader.min.js"></script>
 	<script src="mini-editor.js"></script>
 	<script src="/home/theme.js"></script>
 
