fix mini editor loading

--- a/home/index.html
+++ b/home/index.html
@@ -305,8 +305,8 @@ circle(50, 50, 50);
 	</script>
 
 	<script src="/home/theme.js"></script>
+	<script src="/learn/mini-editor.js"></script>
 	<script type="module">
-		import { MiniEditor } from '/learn/mini-editor_esm.js';
 
 		document.getElementById('fullscreenIcon').addEventListener('click', () => {
 			if (document.fullscreenElement) document.exitFullscreen();
