--- a/home/index.html
+++ b/home/index.html
@@ -305,6 +305,7 @@ circle(50, 50, 50);
 	</script>
 
 	<script src="/home/theme.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.55.1/min/vs/loader.min.js"></script>
 	<script src="/learn/mini-editor.js"></script>
 	<script type="module">
 
