--- a/dev/classic.html
+++ b/dev/classic.html
@@ -33,6 +33,7 @@
 	<script src="/src/q5-fes.js"></script>
 	<script src="/src/q5-display.js"></script>
 	<script src="/src/q5-input.js"></script>
+	<script src="/src/q5-lang.js"></script>
 	<script src="/src/q5-math.js"></script>
 	<script src="/src/q5-record.js"></script>
 	<script src="/src/q5-sound.js"></script>
