--- a/dev/index.html
+++ b/dev/index.html
@@ -43,7 +43,7 @@
 		import '/src/q5-webgpu.js';
 	</script>
 
-	<script type="module" src="sketch.js" data-sketch></script>
+	<script type="module" src="sketch.js"></script>
 </body>
 
 </html>
