--- a/dev/p5.html
+++ b/dev/p5.html
@@ -19,7 +19,10 @@
 <body>
 	<main></main>
 
-	<script src="https://cdn.jsdelivr.net/npm/p5@2/lib/p5.js"></script>
+	<script src="p5/p5.js"></script>
+	<script src="p5/p5.webgpu.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/p5@2/lib/p5.js"></script> -->
+	<!-- <script src="https://cdn.jsdelivr.net/npm/p5@2/lib/p5.webgpu.js"></script> -->
 	<!-- <script src="https://cdn.jsdelivr.net/npm/p5@2/lib/addons/p5.sound.min.js"></script> -->
 
 	<script src="sketch-p5.js"></script>
