add v4 release links

--- a/home/index.html
+++ b/home/index.html
@@ -29,7 +29,7 @@
 
 <body class="dark">
 	<main></main>
-	<a id="releaseVideoLink" href="" target="_blank">
+	<a id="releaseVideoLink" href="https://youtu.be/RHTXMsy8gjI" target="_blank">
 		<md id="news">
 			📣 v4.0 released!</md>
 	</a>
@@ -415,7 +415,8 @@
 			<div class="card">
 				<md id="md6-0">
 					<h3 id="start-coding-💻">Start coding 💻</h3>
-					<p>The <a href="" target="_blank">q5 Web Editor</a> is coming soon!</p>
+					<p>The <a href="https://q5js.substack.com/p/q5js-webgpu-v40-released" target="_blank">q5 Web Editor</a> is
+						coming soon!</p>
 				</md>
 			</div>
 			<div class="card">
