--- a/home/index.html
+++ b/home/index.html
@@ -39,16 +39,20 @@
 			<div class="img q5js_brand"></div>
 		</a>
 		<div id="navLinks">
-			<a href="../learn">
+			<a href="https://codevre.com/q5-editor">
 				<md id="nav0">
+					🎨&nbsp;Create</md>
+			</a>
+			<a href="../learn">
+				<md id="nav1">
 					📖&nbsp;Learn</md>
 			</a>
 			<a href="https://discord.gg/QuxQYwGWuB">
-				<md id="nav1">
+				<md id="nav2">
 					🤝&nbsp;Join</md>
 			</a>
 			<a href="https://www.patreon.com/q5play">
-				<md id="nav2">
+				<md id="nav3">
 					💙&nbsp;Support</md>
 			</a>
 		</div>
@@ -415,8 +419,8 @@
 			<div class="card">
 				<md id="md6-0">
 					<h3 id="start-coding-💻">Start coding 💻</h3>
-					<p>The <a href="https://q5js.substack.com/p/q5js-webgpu-v40-released" target="_blank">q5 Web Editor</a> is
-						coming soon!</p>
+					<p>No installation required! Use the new <a href="https://codevre.com/q5-editor" target="_blank">q5 Web
+							Editor</a>.</p>
 				</md>
 			</div>
 			<div class="card">
@@ -616,6 +620,21 @@
 		});
 	</script>
 	<script src="home.js" defer=""></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
