--- a/learn/index.html
+++ b/learn/index.html
@@ -57,6 +57,11 @@
 		<nav id="navbar" class="navopen"></nav>
 		<main id="content" class="fade-in"></main>
 	</div>
+	<div class="webgpu-warning" role="status" aria-live="polite">
+		<div>⚠️ WebGPU is not supported by your web browser or computer. Try
+			using Google Chrome.
+		</div>
+	</div>
 
 	<script src="/q5.js"></script>
 
