--- a/teach/accessibility.html
+++ b/teach/accessibility.html
@@ -132,9 +132,9 @@
 		</p>
 
 		<h2>Compatibility with Browsers and Assistive Technology</h2>
-		<p>Accessibility of p5play relies on a web browser to work with the particular combination of assistive
+		<p>Accessibility of q5 relies on a web browser to work with the particular combination of assistive
 			technologies or plugins installed on your computer</p>
-		<p>p5play is designed to be compatible with Modern web browsers (Google Chrome, Firefox, Safari, Edge) on
+		<p>q5 is designed to be compatible with Modern web browsers (Google Chrome, Firefox, Safari, Edge) on
 			Windows,
 			macOS, and Linux.</p>
 		<h2>Limitations and Alternatives</h2>
