--- a/home/index.html
+++ b/home/index.html
@@ -6,20 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>q5</title>
 	<link rel="icon" href="/q5js_logo.avif">
-	<meta name="description"
-		content="Beginner friendly graphics powered by WebGPU and optimized for interactive art! q5.js is also compatible with popular p5.js addons including p5.sound, ml5.js, and p5play.">
+	<meta name="description" content="Beginner friendly graphics powered by WebGPU and optimized for interactive art!">
 
 	<meta property="og:title" content="q5.js">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://q5js.org">
 	<meta property="og:image" content="q5js_logo.avif">
 	<meta property="og:description"
-		content="Beginner friendly graphics powered by WebGPU and optimized for interactive art! q5.js is also compatible with popular p5.js addons including p5.sound, ml5.js, and p5play.">
+		content="Beginner friendly graphics powered by WebGPU and optimized for interactive art!">
 
-	<!-- Custom Styles -->
 	<link rel="stylesheet" href="home.css">
 
-	<!-- Libraries -->
 	<link id="highlight-theme" rel="stylesheet"
 		href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
@@ -388,12 +385,12 @@
 				</p>
 			</div>
 			<div class="card">
-				<a href="https://p5play.org" target="_blank">
-					<img src="/assets/brands/p5play_brand_dark.webp" alt="p5play" class="brand-img">
+				<a href="https://q5play.org" target="_blank">
+					<img src="/assets/brands/q5play_brand-dark.avif" alt="q5play" class="brand-img">
 				</a>
 				<p>
 					<md id="md5-3">
-						<a href="https://p5play.org" target="_blank">p5play</a> adds high quality Box2D physics simulation, better
+						<a href="https://q5play.org" target="_blank">q5play</a> adds high quality Box2D physics simulation, better
 						input handling, a camera, and animations.
 					</md>
 				</p>
@@ -451,8 +448,6 @@
 		</div>
 	</section>
 
-
-
 	<footer>
 		<md id="md100-0">
 			q5js.org was created by Quinton Ashley and <a href="https://github.com/q5js/q5.js/graphs/contributors"
@@ -460,181 +455,8 @@
 	</footer>
 
 	<script src="../q5.js"></script>
-	<script>
-		createCanvas();
-
-		let speedMod = 1;
-		let draggedLava = null;
-		let dragOffsetX = 0;
-		let dragOffsetY = 0;
-
-		class Lava {
-			constructor(x, y, r) {
-				this.x = x;
-				this.y = y;
-				this.r = r;
-				this.d = r * 2;
-				this.maxSize = this.d * 2;
-				this.xSpeed = random(-0.5, 0.5);
-				this.ySpeed = random(-0.5, -2);
-				this.res = r < 25 ? 5 : 8;
-				this.resF = this.res + 2;
-				this.offsets = Array.from({ length: this.res }, () => random(-5, 5));
-				this.noiseOffsets = Array.from({ length: this.res }, () => random(1000));
-				this.layer = round(random(1, 4));
-			}
-
-			move() {
-				if (!this.dragging) {
-					this.x += this.xSpeed;
-					this.y += this.ySpeed * speedMod;
-					if (this.y < -this.maxSize) {
-						this.x = random(width);
-						this.y = height + this.d;
-					}
-				}
-
-				for (let i = 0; i < this.offsets.length; i++) {
-					this.offsets[i] = map(noise(this.noiseOffsets[i]), 0, 1, 0, this.d);
-					this.noiseOffsets[i] += this.hovered ? 0.025 : 0.005;
-				}
-			}
-
-			show() {
-				push();
-				if (darkMode) fill(183, 235, 255, 25 * this.layer);
-				else fill(0, 25 * this.layer);
-
-				if (this.hovered) strokeWeight(2);
-				else strokeWeight(1);
-
-				translate(this.x, this.y);
-
-				beginShape();
-				for (let i = 0; i <= this.resF; i++) {
-					let rad = (i * TAU) / this.res;
-					let r = this.r + this.offsets[i % this.offsets.length];
-					curveVertex(r * cos(rad), r * sin(rad));
-				}
-				endShape();
-
-				if (mouseX || mouseY) {
-					this.hovered = inFill(mouseX, mouseY);
-
-					if (this.hovered && mouseIsPressed) {
-						if (!draggedLava) {
-							this.dragging = true;
-							draggedLava = this;
-							dragOffsetX = this.x - mouseX;
-							dragOffsetY = this.y - mouseY;
-							cursor('grabbing');
-						}
-					} else if (this.hovered) {
-						cursor('grab');
-					}
-				} else this.hovered = false;
-
-				pop();
-			}
-		}
-
-		let darkMode = false;
-		let lavas = [];
-		let looping = true;
-		let amount = floor(width / 40);
-		for (let i = 0; i < amount; i++) {
-			let l = new Lava(random(width), random(height), random(10, 100));
-			lavas.push(l);
-		}
-		let blue = color(183, 235, 255, 64);
-		let black = color(0, 64);
-
-		function draw() {
-			darkMode = document.body.classList.contains('dark');
-			background(darkMode ? black : blue);
-
-			for (let l of lavas) {
-				l.move();
-				l.show();
-			}
-		}
-
-		function mouseDragged() {
-			if (draggedLava) {
-				draggedLava.x = mouseX + dragOffsetX;
-				draggedLava.y = mouseY + dragOffsetY;
-				return false;
-			}
-		}
-
-		function mouseReleased() {
-			if (draggedLava) {
-				draggedLava.dragging = false;
-				draggedLava = null;
-			}
-			mouseX = mouseY = 0;
-		}
-
-		function mouseWheel() {
-			return true;
-		}
-
-		function windowResized() {
-			resizeCanvas();
-		}
-
-	</script>
-
 	<script src="/home/theme.js"></script>
-
-	<script type="module">
-		// Prevent initial transition
-		document.body.classList.add('no-transition');
-
-		document.getElementById('fullscreenIcon').addEventListener('click', () => {
-			if (document.fullscreenElement) document.exitFullscreen();
-			else document.documentElement.requestFullscreen();
-		});
-
-		document.getElementById('darkModeIcon').addEventListener('click', () => {
-			setTheme(document.body.classList.contains('dark') ? 'light' : 'dark');
-		});
-
-		function handleScroll() {
-			if (window.scrollY > 50) {
-				// Adjust the scroll position as needed
-				document.body.classList.add('nav-fixed');
-			} else {
-				document.body.classList.remove('nav-fixed');
-			}
-		}
-
-		window.addEventListener('scroll', handleScroll);
-		handleScroll();
-
-		// Enable transitions after a moment
-		requestAnimationFrame(() => {
-			requestAnimationFrame(() => {
-				document.body.classList.remove('no-transition');
-			});
-		});
-	</script>
 	<script src="home.js" defer=""></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 
 </html>
