--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
 	<title>q5</title>
 	<link rel="icon" href="/q5js_logo.avif">
 	<link rel="stylesheet" href="index.css">
-	<meta name="description"
-		content="Beginner friendly graphics powered by WebGPU and optimized for interactive art! q5.js is also compatible with popular p5.js addons including p5.sound, ml5.js, and p5play.">
+	<meta name="description" content="Beginner friendly graphics powered by WebGPU, optimized for interactive art!">
 
 	<meta property="og:title" content="q5.js">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://q5js.org">
 	<meta property="og:image" content="q5js_logo.avif">
 	<meta property="og:description"
-		content="Beginner friendly graphics powered by WebGPU and optimized for interactive art! q5.js is also compatible with popular p5.js addons including p5.sound, ml5.js, and p5play.">
+		content="Beginner friendly graphics powered by WebGPU, optimized for interactive art!">
 </head>
 
 <body> </body>
